package com.game_machine;

// protoc File.proto  --java_out= /src/main/java


option optimize_for = SPEED;

option java_outer_classname = "Pb";

message Component {
  
}

message Entity {
  repeated Component component = 1;
}

message Player {
	optional int32 x = 1;
	optional int32 y = 2;
	optional int32 z = 3;
	required int32 id = 4;
	optional string name = 5;
}

message Item {
	required string key = 1;
	optional string value = 2;
}
	
message GameCommand {
	required string name = 1;
	repeated Item item = 2;
}

message ClientMessage {
  optional bytes data = 1;
  repeated Player players = 2;
  repeated GameCommand gameCommands = 3;
}
